--- a/src/components/Nav2.module.css
+++ b/src/components/Nav2.module.css
@@ -3,11 +3,31 @@
 
   background: #fff;
   margin: 0 auto;
+  position: relative;
+}
+.dropDownContainer {
+  position: absolute;
+  z-index: 5;
+  margin-top: 2rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+}
+.showDropDown {
+  position: absolute;
+  z-index: 5;
+  margin-top: 2rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: block;
 }
 .nav2 {
   width: 120rem;
   height: 7.5rem;
   flex-shrink: 0;
+
   background: #171e27;
   display: flex;
   justify-content: space-between;
@@ -42,6 +62,7 @@
 .navLinks {
   display: flex;
   gap: 5rem;
+  padding-right: 5rem;
 }
 .navLinkProducts {
   display: flex;
